extract tool fixes and improvements

--- a/Evaluation/extract_bboxes/CMakeLists.txt
+++ b/Evaluation/extract_bboxes/CMakeLists.txt
@@ -13,6 +13,9 @@ file(GLOB SRC_FILES ${SRC_DIR}/*.c)
 list(REMOVE_ITEM SRC_FILES "${SRC_DIR}/darknet.c")
 list(REMOVE_ITEM SRC_FILES "${SRC_DIR}/yolo_demo.cpp")
 list(REMOVE_ITEM SRC_FILES "${SRC_DIR}/demo.c")
+list(REMOVE_ITEM SRC_FILES "${SRC_DIR}/coco.c")
+list(REMOVE_ITEM SRC_FILES "${SRC_DIR}/detector.c")
+list(REMOVE_ITEM SRC_FILES "${SRC_DIR}/yolo.c")
 
 list(REMOVE_ITEM SRC_FILES "${SRC_DIR}/cpu_gemm.c")
 list(REMOVE_ITEM SRC_FILES "${SRC_DIR}/server.c")
