annotation_tool fixes

--- a/Evaluation/annotation_tool/CMakeLists.txt
+++ b/Evaluation/annotation_tool/CMakeLists.txt
@@ -1,7 +1,6 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 2.8)
 project(annotation)
-
+set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
 find_package(OpenCV REQUIRED)
-
 add_executable(${PROJECT_NAME} opencv_annotation.cpp)
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
