annotation_tool now works with video

--- a/Evaluation/annotation_tool/CMakeLists.txt
+++ b/Evaluation/annotation_tool/CMakeLists.txt
@@ -1,5 +1,6 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.3)
 project(annotation)
+set(CMAKE_CXX_STANDARD 11)
 set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
 find_package(OpenCV REQUIRED)
 add_executable(${PROJECT_NAME} opencv_annotation.cpp)
