--- a/DarknetTrainer/CMakeLists.txt
+++ b/DarknetTrainer/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.2)
 project(darknet C CXX)
 
 set(CMAKE_CXX_STANDARD 11)
-set(GPU ON)
+set(GPU OFF)
 
 if(${GPU})
     set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
